--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/loghi/logo_min.png" />
 
     <!-- Per Safari su iOS -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#dfdddd">
