--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/loghi/logo_min.png" />
-
-    <!-- Per Safari su iOS -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="#dfdddd">
-
-    <!-- Per Chrome su Android/iOS -->
-    <meta name="theme-color" content="#dfdddd">
-
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/images/loghi/logo_min.png"
+    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#c8ae92">
+    <meta name="theme-color" content="#c8ae92">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Braglia</title>
   </head>
