--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <meta name="theme-color" content="#c8ae92">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>Braglia</title>
   </head>
   <body>
